--- a/index.html
+++ b/index.html
@@ -3,177 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/style.css">
     <title>Document</title>
 </head>
-
-<style>
-
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
-*{
-	margin: 0;
-	padding: 0;
-	font-family: 'Poppins';
-    box-sizing: border-box;
-}
-
-.title {
-
-    padding: 10px;
-    display:grid;
-    place-items:center; 
-}
-
-.container {
-    display:flex;
-    justify-content: center;
-    width: 100%;
-    box-sizing: border-box;
-}
-
-.buff, .chicken, .veg {
-    width:400px;
-    position:relative;
-}
-.buff{
-    border: 2px solid black;
-    padding: 5px;
-    background-color:#a28089;
-    margin-right: 10px;
-    margin-left: 20px;
-}
-
-.chicken{
-    border: 2px solid black;
-    padding: 5px;
-    background-color:#a28089;
-    margin-right: 10px;
-    margin-left: 10px;
-}
-
-.veg{
-    border: 2px solid black;
-    padding: 5px;
-    background-color:#a28089;
-    margin-right: 20px;
-    margin-left: 10px;
-}
-
-.btitle, .ctitle, .vtitle{
-    height: 30px;
-    width: 250px;
-    font-size: 20px;
-    position: absolute;
-    right:0;
-    margin-right: 10px;
-    border: 2px solid black;
-    display:grid;
-    place-items:center; 
-}
-
-.btitle{
-    background-color: #e5eaf5;
-}
-
-.ctitle{
-    background-color: #d0bdf4;
-}
-
-.vtitle{
-    background-color: #8458B3;
-}
-
-.content{
-    margin-top: 40px;
-}
-
-/********** Large devices only **********/
-@media (min-width: 992px){
-  .col-lg-1 {
-    width: 8.33%;
-  }
-  .col-lg-2 {
-    width: 16.66%;
-  }
-  .col-lg-3 {
-    width: 25%;
-  }
-  .col-lg-4 {
-    width: 33.33%;
-  }
-  .col-lg-5 {
-    width: 41.66%;
-  }
-  .col-lg-6 {
-    width: 50%;
-  }
-  .col-lg-7 {
-    width: 58.33%;
-  }
-  .col-lg-8 {
-    width: 66.66%;
-  }
-  .col-lg-9 {
-    width: 74.99%;
-  }
-  .col-lg-10 {
-    width: 83.33%;
-  }
-  .col-lg-11 {
-    width: 91.66%;
-  }
-  .col-lg-12 {
-    width: 100%;
-  }
-}
-
-/********** Medium devices only **********/
-@media (min-width: 768px) and (max-width: 991px){
-  .col-md-1 {
-    width: 8.33%;
-  }
-  .col-md-2 {
-    width: 16.66%;
-  }
-  .col-md-3 {
-    width: 25%;
-  }
-  .col-md-4 {
-    width: 33.33%;
-  }
-  .col-md-5 {
-    width: 41.66%;
-  }
-  .col-md-6 {
-    width: 50%;
-  }
-  .col-md-7 {
-    width: 58.33%;
-  }
-  .col-md-8 {
-    width: 66.66%;
-  }
-  .col-md-9 {
-    width: 74.99%;
-  }
-  .col-md-10 {
-    width: 83.33%;
-  }
-  .col-md-11 {
-    width: 91.66%;
-  }
-  .col-md-12 {
-    width: 100%;
-  }
-}
-
-/********For small device only**********/
-@media (min-width: 768px) and (max-width: 991px){
-  .col-md-12 {
-    width: 100%;
-  }
-}
-
-</style>
 
 <body>
     <h1 class="title">Our Menu</h1>
