--- a/index.html
+++ b/index.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/style.css">
-    <title>Document</title>
-</head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="CSS/style.css">
+<title>Responsive Layout</title>
 
+</head>
 <body>
-    <h1 class="title">Our Menu</h1>
-    <div class="container">
-        <div class="buff col-lg-4 col-md-6 col-sm-12">
-            <div class="btitle">Buff MOMO</div>
-            <div class="content">For savory Chicken Momos, begin by mixing minced chicken with finely chopped onions, garlic, ginger, and a blend of spices in a large bowl. Let the mixture cool for 20-30 minutes. Meanwhile, prepare the dough by kneading plain flour, salt, and oil with warm water. After 3-4 hours of resting, divide the dough into small balls, roll out thin rounds, and fill them with the seasoned chicken mixture. Shape and steam the momos for 5-7 minutes. Serve these delectable chicken momos hot, accompanied by a side of spicy momo ko achar.</div>
-        </div>
-        <div class="chicken col-lg-4 col-md-6 col-sm-12">
-            <div class="ctitle">Chicken MOMO</div>
-            <div class="content">For flavorful Buff (beef) Momos, create a dough by combining plain flour, salt, and oil, kneading it with warm water. Allow the dough to rest for several hours, then divide it into small balls. Roll out thin rounds and use them to encase a well-seasoned minced buffalo meat mixture. Shape the momos and steam for 5-7 minutes until cooked through. Enjoy these hearty buffalo momos with a side of spicy dipping sauce for a satisfying culinary experience.</div>
-        </div>
-        <div class="veg col-lg-4 col-md-6 col-sm-12">
-            <div class="vtitle">Veg MOMO</div>
-            <div class="content">For a delightful vegetarian option, prepare Veg Momos by combining finely chopped vegetables like cabbage, carrots, and bell peppers in a bowl. Add minced garlic, ginger, and a mix of spices to enhance the flavor. Let the vegetable mixture rest for 20-30 minutes. Knead a dough with plain flour, salt, and oil, and let it rest for 3-4 hours. Divide the dough into small balls, roll out thin rounds, and fill them with the vegetable mixture. Shape and steam the momos for 5-7 minutes. Serve these flavorful veg momos with a side of dipping sauce for a tasty meatless alternative.</div>
-        </div>
+<h1>Our Menu</h1>
+
+<div class="row">
+    <div class="buff col-lg-4 col-md-6 col-sm-12">
+        <div class="btitle">Buff MOMO</div>
+        <div class="content">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;For savory Chicken Momos, begin by mixing minced chicken with finely chopped onions, garlic, ginger, and a blend of spices in a large bowl. Let the mixture cool for 20-30 minutes. Meanwhile, prepare the dough by kneading plain flour, salt, and oil with warm water. After 3-4 hours of resting, divide the dough into small balls, roll out thin rounds, and fill them with the seasoned chicken mixture. Shape and steam the momos for 5-7 minutes. Serve these.</div>
     </div>
+    <div class="chicken col-lg-4 col-md-6 col-sm-12">
+        <div class="ctitle">Chicken MOMO</div>
+        <div class="content">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;For flavorful Buff (beef) Momos, create a dough by combining plain flour, salt, and oil, kneading it with warm water. Allow the dough to rest for several hours, then divide it into small balls. Roll out thin rounds and use them to encase a well-seasoned minced buffalo meat mixture. Shape the momos and steam for 5-7 minutes until cooked through. Enjoy these hearty buffalo momos with a side of spicy dipping sauce for a satisfying culinary experience.</div>
+    </div>
+    <div class="veg col-lg-4 col-md-6 col-md-12 col-sm-12">
+        <div class="vtitle">Veg MOMO</div>
+        <div class="content">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;For a delightful vegetarian option, prepare Veg Momos by combining finely chopped vegetables like cabbage, carrots, and bell peppers in a bowl. Add minced garlic, ginger, and a mix of spices to enhance the flavor. Let the vegetable mixture rest for 20-30 minutes. Knead a dough with plain flour, salt, and oil, and let it rest for 3-4 hours. Divide the dough into small balls, roll out thin rounds, and fill them with the vegetable mixture. Shape and serve.</div>
+    </div>
+</div>
+
 </body>
 </html>
